# mm-agent-bridge

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: debug_copilot.py  debug_opencode.py
src/mm_agent_bridge/: _patches.py  bot.py  config.py  main.py  mm.py
src/mm_agent_bridge/clients/: __init__.py  base.py  copilot.py  factory.py  opencode.py
tests/: conftest.py
tests/integration/: test_copilot_client.py  test_full_flow.py  test_mm_to_queue.py  test_opencode_chat.py
tests/unit/: test_config.py  test_event_filter.py  test_greeting.py  test_main.py  test_message_clean.py  test_mm_helpers.py  test_queue_consumer.py
