[project]
name = "mm-agent-bridge"
version = "0.1.0"
description = "Mattermost bot that bridges mentions to AI coding agents (OpenCode, etc.)"
readme = "README.md"
authors = [
    { name = "yudong", email = "yudong@thoughtworks.com" }
]
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk>=0.3.0",
    "httpx>=0.27",
    "mattermostdriver>=7.3.2",
    "opencode-ai>=0.1.0a36",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mm-agent-bridge = "mm_agent_bridge.main:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
